[gd_scene load_steps=11 format=3 uid="uid://b52gtlhb1qrtv"]

[ext_resource type="Script" path="res://roaming_pov/PopUp.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cxllua8qit72w" path="res://fonts/PTSerif-Regular.ttf" id="3_t76fq"]
[ext_resource type="AudioStream" uid="uid://dgic7pgxuruex" path="res://dialogue_system/sounds/typewriter_click_5.wav" id="4"]
[ext_resource type="PackedScene" uid="uid://ck0qxjjpqb3lf" path="res://sounds/RandomSoundContainer.tscn" id="4_j7yhk"]
[ext_resource type="AudioStream" uid="uid://bv7r5ekjvfdrp" path="res://dialogue_system/sounds/typewriter_click_1.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://btxt4q756no5y" path="res://dialogue_system/sounds/typewriter_click_2.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://t4s0pj6pfavt" path="res://dialogue_system/sounds/typewriter_click_4.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://vvo127q5iry3" path="res://dialogue_system/sounds/typewriter_click_3.wav" id="8"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(2797, 2103)

[sub_resource type="LabelSettings" id="LabelSettings_txwts"]
font = ExtResource("3_t76fq")
font_size = 96
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="PopUp" type="Area2D" groups=["popups"]]
script = ExtResource("2")

[node name="FullRect" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullRect"]
z_index = 2
position = Vector2(1418.5, 1084.5)
shape = SubResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(2805, 756)
offset_top = 75.0
offset_right = 2880.0
offset_bottom = 831.0
mouse_filter = 2
theme_override_constants/separation = 80

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(756, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Control4" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="LabelContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 150

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_t76fq")
theme_override_font_sizes/font_size = 96
label_settings = SubResource("LabelSettings_txwts")
autowrap_mode = 3

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/LabelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="TypewriterSounds" parent="." instance=ExtResource("4_j7yhk")]
volume_range = 8.0
pitch_range = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TypewriterSounds"]
stream = ExtResource("5")
volume_db = -30.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="TypewriterSounds"]
stream = ExtResource("6")
volume_db = -30.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="TypewriterSounds"]
stream = ExtResource("8")
volume_db = -30.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="TypewriterSounds"]
stream = ExtResource("7")
volume_db = -30.0

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="TypewriterSounds"]
stream = ExtResource("4")
volume_db = -30.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_OnClickPopUp_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_OnClickPopUp_mouse_exited"]
[connection signal="input_event" from="FullRect" to="." method="_on_FullRect_input_event"]
